--- a/Redaction/Rapport_Final/Rapport.tex
+++ b/Redaction/Rapport_Final/Rapport.tex
@@ -667,11 +667,11 @@ Nous comparerons enfin cet indicateur avec indicateur synthétique de confiance 
 \textbf{Tweets mensuels}
 
 Il s'agit de la base des tweets postés en France utilisée précédemment (cf. partie  \ref{sec:hyperparametres}) mais couvrant un horizon temporel plus large (2011-2018).
-Nous disposons de 4000 tweets pour tous les mois de la période. \colorbox{BurntOrange}{préciser après précisions Benji} 
+Nous disposons de 4000 tweets pour tous les mois de la période sous-échantillonnés de manière à avoir autant de tweets pour certains jours (les 1, 5, 10, 15, 20, 25 et 28 de chaque mois) et heures (0h, 6h, 12h 15h 18h et 21h) fixés. 
 
 \textbf{Tweets annotés par la SNCF}
 
-Cette base est composée d'un ensemble d'environ 23 000 tweets fournis par la SNCF qui sont annotés par la valeur $+1$ s'ils sont considérés positifs et $-1$ s'ils sont considérés négatifs en termes de sentiment. \colorbox{BurntOrange}{préciser après précisions Benji} 
+Cette base est composée d'un ensemble d'environ 23 000 tweets fournis par la SNCF qui sont annotés par la valeur $+1$ s'ils sont considérés positifs et $-1$ s'ils sont considérés négatifs en termes de sentiment.
 
 
 \textbf{Indicateur synthétique de confiance des ménages}
@@ -812,12 +812,20 @@ Cette nouvelle base test permet certainement de corriger une partie des biais é
   Le modèle de \emph{word-embeddings} semble mieux réagir à la présence de mots inconnus, ici plus nombreux que précédemment\footnote{52.0 \% des mots du vocabulaire et 12.7 \% des mots de la base test de github ne sont pas dans la base d'entraînement SNCF et 52,8 \% des mots du vocabulaire et 13,0 \% des mots ne sont ni dans la base d'entraînement SNCF ni dans le vocabulaire des \emph{word-embeddings}. Ainsi, les mots de la base test « github » qui ne sont pas dans la base d'entraînement « sncf » sont rarement dans les vecteurs-mots de \emph{Word2Vec}.}, que le modèle de référence. Comme il présente une efficacité similaire à lorsqu'il était évalué sur une autre base de test, il semble être plus général et s'adapter à des tweets aux contenus plus variés.
 \end{itemize}
 
-\hypertarget{sentiments-des-tweets-et-enquuxeate-de-conjoncture-aupruxe8s-des-muxe9nages-alain}{%
-\subsection{Sentiments des tweets et enquête de conjoncture auprès des ménages {[}Alain{]}}\label{sentiments-des-tweets-et-enquuxeate-de-conjoncture-aupruxe8s-des-muxe9nages-alain}}
+\hypertarget{sentiments-des-tweets-et-enquuxeate-de-conjoncture-aupruxe8s-des-muxe9nages}{%
+\subsection{Sentiments des tweets et enquête de conjoncture auprès des ménages}\label{sentiments-des-tweets-et-enquuxeate-de-conjoncture-aupruxe8s-des-muxe9nages}}
 
-\hypertarget{conclusion-suxfbrement-kim}{%
-\section*{Conclusion {[}sûrement Kim{]}}\label{conclusion-suxfbrement-kim}}
-\addcontentsline{toc}{section}{Conclusion {[}sûrement Kim{]}}
+\hypertarget{conclusion}{%
+\section*{Conclusion}\label{conclusion}}
+\addcontentsline{toc}{section}{Conclusion}
+
+Ce projet très riche nous a permis de partir à la découverte des méthodes d'apprentissage par réseaux de neurones, via le modèle \emph{Word2Vec}. Nous nous sommes imprégnés de son fonctionnement et l'avons implémenté dans son ensemble grâce à la librairie \texttt{Pytorch} de Python (partie 1). Au-delà de la compréhension et de l'implémentation du modèle, nous nous sommes également initiés aux tests d'hyperparamètres et à son évaluation sur un corpus fictif (partie 2) grâce à plusieurs méthodes (calculs de similarités cosinus, opérations vectorielles sur les mots, méthodes de réduction de dimension ACP et T-SNE et jugement humain). Il a été fascinant d'observer à quel point le modèle présente d'excellents résultats en termes de capture sémantiques des mots dans un texte.
+
+Dans la partie 3 dédiée à l'analyse de sentiments, nous avons pu appliquer sur un cas concret plusieurs méthodes étudiées durant ce second semestre 2020 (modèles de prédiction binaire, analyses de séries temporelles, minimisation du risque empirique / cross-validation \ldots{}). L'entraînement et le test du modèle logit dont les prédicteurs correspondent aux dimensions des \emph{word-embedding} nous a permis d'observer qu'en plus de représenter la proximité entre mots, le modèle \emph{Word2Vec} permet de capter dans une certaine mesure le sentiment de phrases.
+
+Bien sûr, la comparaison de l'indice mensuel de sentiments moyens des tweets que nous avons construit avec l'indicateur synthétique de confiance des ménages peu à première vue paraître « décevante » \colorbox{BurntOrange}{(préciser ce qu’on fait dans la partie après rédaction ALAIN)} mais la possibilité d'obtenir deux indicateurs très proches était assez utopique. D'une part pour des raisons évoquées liées aux limites bases d'entraînement et de test (\emph{domain-shift}, processus d'annotation, mots inconnus) mais également car au-delà de la positivité ou négativité d'un tweet, il demeure important d'également déceler le sujet sur lesquel le tweet porte pour créer un indice qui corresponde à une opinion sur un sujet précis (). En effet, la figure X.X montre l'évolution de l'opinion des Français entre 2011 et 2018) concernant un certain nombre de sujets sociaux et nous pouvons voir que les évolutions sont différentes selon les sujets. Un prolongement serait peut-être de se focaliser sur des sujets plus précis en mobilisant les hashtags présents dans les tweets.
+
+Les méthodes d'apprentissage étant en perpétuelle évolution, le modèle \emph{Word2Vec} mis en exergue en 2013, connaît déjà des prolongements. Par exemple, son extension \emph{fasttext}\footnote{La bibliothèque open-source \url{https://fasttext.cc/} permet de télécharger des modèles pré-entraînés dans 157 langues différentes.} (Bojanowski et al., 2017 ), traite de la rareté des mots en représentant le mot non seulement comme lui-même mais grâce à des sacs de n-grammes constitutifs. Par exemple, si n = 3, « WHERE » est représenté par mais également \textless{}wh, whe, her, ere, re\textgreater{}. \emph{Word2Vec} connaît également des modèles « concurrents », le plus connu étant certainement GloVe pour « Global Vectors » (Penning-ton et al., 2014). Alors que \emph{Word2Vec} privilégie l'utilisation de « n-grammes » (avec l'utilisation des mots contextes qui se situent autour d'une fenêtre du mot focus), GloVe se base sur l'ensemble les statistiques d'occurrence des mots du corpus (matrice de cooccurrence mot-mot) et prétend permettre alors, par construction, de capturer des statistiques plus générales liées au corpus.
 
 \newpage
 
